# mesydaq2

./: .gitignore  CMakeLists.txt  CPackOptions.cmake.in  Doxyfile  ID1_config.mcfg~  Makefile  Makefile.in  authors  config.status  configure  configure.in  configure.in.in  configure.in.in~  libtool  mesycfg.mcfg  mesycfg.mcfg~  mesycfg2.mcfg  mesycfg2.mcfg~  mesycfg4.mcfg  mesydaq2.code-workspace  mesydaq2.kdevelop  mesydaq2.kdevelop.pcs  mesydaq2.kdevses
autom4te.cache/: output.0  requests  traces.0  traces.1
cmake/: CPackExternal_linuxdeployqt.cmake
debug/: Makefile  config.h  config.status  libtool
debug/doc/: Makefile
debug/doc/en/: Makefile  index.cache.bz2
debug/po/: Makefile
debug/src/: .mcfg  Makefile  controlinterface.moc  datacruncher.moc  debug%2fsrc%2fmesycfg.mcf  debug%2fsrc%2fmesycfg.old  histogram.moc  mainwindow.moc  mcpd8.moc  measurement.moc  mesydaq2.moc  mesydaq2mainwindow.cpp  mesydaq2mainwindow.cpp~  mesydaq2mainwindow.h  mesydaq2mainwindow.moc  mpsd8.moc  networkdevice.moc
debug/src/.deps/: controlinterface.Po  corba_generic.Po  corbadeviceSK.Po  corbathread.Po  datacruncher.Po  histogram.Po  main.Po  mainwindow.Po  mcpd8.Po  measurement.Po  mesydaq2.Po  mesydaq2mainwindow.Po  mesydaq2widget.Po  mesydaq2widgetbase.Po  mpsd8.Po  networkdevice.Po
doc/: Makefile  Makefile.am  Makefile.in
doc/en/: Makefile  Makefile.am  Makefile.in  index.cache.bz2  index.docbook
extras/: init_mesydaq2
extras/example_configs/: ID1_config.mcfg  mesycfg.mcfg  mesycfg5.mcfg  mesycfg_2cpu.mcfg  mesycfg_non-default-ip.mcfg  saved_by_mesydaq2.mcfg
po/: Makefile  Makefile.in  mesydaq2.pot
src/: .directory  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  controlinterface.cpp  controlinterface.cpp~  controlinterface.h  controlinterface.moc  corbadevice.idl  corbathread.cpp~  datacruncher.cpp  datacruncher.cpp~  datacruncher.h  datacruncher.h~  datacruncher.moc  git_sha1.cc.in  git_sha1.h  histogram.cpp  histogram.cpp~  histogram.h  histogram.moc  main.bak  main.cpp  main.cpp~  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwindow.cpp  mainwindow.cpp~  mainwindow.h  mainwindow.h~  mainwindow.moc  mcpd8.cpp  mcpd8.h  mcpd8.moc  mdefines.h  measurement.cpp  measurement.cpp~  measurement.h  (+33 more)
src/.deps/: controlinterface.Po  datacruncher.Po  histogram.Po  main.Po  mainwindow.Po  mcpd8.Po  measurement.Po  mesydaq2.Po  mesydaq2mainwindow.Po  mpsd8.Po  networkdevice.Po
templates/: h
